feedback and event attendance added swagger updated
